--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             utilintySort.properties.get(1).setRange(10, 20);
 
 
-
+            window.utilintySort = utilintySort;
             console.log(utilintySort);
         });
     </script>
